--- a/Projects/restaurant/index.html
+++ b/Projects/restaurant/index.html
@@ -10,7 +10,7 @@
         <div id="navbar">
             <a id="logo" href="index.html">
                 <img 
-                    src="images/tree house tales logo.png"
+                    src="images/cropped tree house tales logo.png"
                     width="100"
                     alt="leaf logo"
                 >
