--- a/Projects/restaurant/menu-index.html
+++ b/Projects/restaurant/menu-index.html
@@ -8,7 +8,12 @@
     </head>
     <body>
         <div id="navbar">
-            <a id="logo" href="index.html">TREE HOUSE TALES</a>
+            <a id="logo" href="index.html">
+                <img 
+                    src="images/cropped tree house tales logo.png"
+                    width="100"
+                    alt="leaf logo"
+                >
             <i class="fa-solid fa-dog"></i>
             <div class="dropdown-container">
                 <div class="dropdown-menu">
